--- a/app/assets/stylesheets/web/common/_navbar.scss
+++ b/app/assets/stylesheets/web/common/_navbar.scss
@@ -166,6 +166,7 @@
     display: block;
     color: #34445b;
     padding: 1rem;
+    opacity: 1;
     text-transform: uppercase;
   }
 
@@ -309,7 +310,10 @@
       float: left;
       &:hover{
         > input[type="checkbox"] + .sub-menu {
-          display: block;
+          -webkit-transform: translateY(0);
+          -ms-transform: translateY(0);
+          transform: translateY(0);
+          visibility: visible;
         }
       }
     }
@@ -327,6 +331,21 @@
       width: 210px;
       z-index: 3000;
       box-shadow: 0 1px 2px 0 rgba(0,0,0,0.22);
+      display: block;
+      visibility: hidden;
+      padding: 0;
+      -webkit-transform: translateZ(0);
+      transform: translateZ(0);
+      will-change: transform;
+      -webkit-transform: translateY(20px);
+      -ms-transform: translateY(20px);
+      transform: translateY(20px);
+      -webkit-transition: -webkit-transform .3s;
+      transition: -webkit-transform .3s;
+      transition: transform .3s;
+      transition: transform .3s,-webkit-transform .3s;
+
+
       &.arrow-icon-top{
         &:after{
           content: "";
@@ -344,7 +363,7 @@
 
     .sub-menu .sub-menu {
       z-index: 3001;
-      top: -8px;
+      top: 0;
       left: 203px;
     }
 
