--- a/app/assets/stylesheets/web/common/_navbar.scss
+++ b/app/assets/stylesheets/web/common/_navbar.scss
@@ -336,9 +336,9 @@
       -webkit-transform: translateZ(0);
       transform: translateZ(0);
       will-change: transform;
-      -webkit-transform: translateY(20px);
-      -ms-transform: translateY(20px);
-      transform: translateY(20px);
+      -webkit-transform: translateY(-6%);
+      -ms-transform: translateY(-6%);
+      transform: translateY(-6%);
       -webkit-transition: -webkit-transform .3s;
       transition: -webkit-transform .3s;
       transition: transform .3s;
