--- a/app/views/shared/web/common/_navbarsubmenu.erb
+++ b/app/views/shared/web/common/_navbarsubmenu.erb
@@ -14,8 +14,7 @@
       <input type="checkbox" id="tm">
       <ul class="main-menu clearfix m-0 p-0 list-unstyled collapse" id="navbarToggler">
 
-        <li><a href="javascript:void(0)" class="main-nav-item">Products
-          <span class="drop-icon"></span>
+        <li><a href="javascript:void(0)" class="main-nav-item">Products<span class="drop-icon"></span>
           <label title="Toggle Drop-down" class="drop-icon navbar-toggler" for="products" data-toggle="collapse" data-target="#navbarToggler2" aria-controls="navbarToggler2" aria-expanded="false" aria-label="Toggle navigation"></label>
         </a>
           <input type="checkbox" id="products">
@@ -41,8 +40,7 @@
           </ul>
         </li>
 
-        <li><a href="javascript:void(0)" class="main-nav-item">Developers
-          <span class="drop-icon"></span>
+        <li><a href="javascript:void(0)" class="main-nav-item">Developers<span class="drop-icon"></span>
           <label title="Toggle Drop-down" class="drop-icon navbar-toggler" for="developers" data-toggle="collapse" data-target="#navbarToggler3" aria-controls="navbarToggler3" aria-expanded="false" aria-label="Toggle navigation"></label>
         </a>
           <input type="checkbox" id="developers">
@@ -134,8 +132,7 @@
         </li>
 
 
-        <li><a href="javascript:void(0)" class="main-nav-item">Company
-          <span class="drop-icon"></span>
+        <li><a href="javascript:void(0)" class="main-nav-item">Company<span class="drop-icon"></span>
           <label title="Toggle Drop-down" class="drop-icon navbar-toggler" for="company" data-toggle="collapse" data-target="#navbarToggler5" aria-controls="navbarToggler5" aria-expanded="false" aria-label="Toggle navigation"></label>
         </a>
           <input type="checkbox" id="company">
