--- a/app/views/web/ost/index/_home_carousel_content.erb
+++ b/app/views/web/ost/index/_home_carousel_content.erb
@@ -2,6 +2,8 @@
   image_height = 720;
   image_width = 1280;
   padding_bottom = (100 * image_height.to_f)/image_width.to_f;
+  news_index = news_index.present? ? news_index : 0;
+  needs_low_priority_lazy_loading = news_index > 5;
 %>
 <div class="w-100 content">
   <%if item['news_list_link_type'] == 'video-embed-url' %>
@@ -21,6 +23,7 @@
           <img class="img-fluid responsively-lazy"
                src="<%= raw(item['news_list_image']) %> " data-srcset="<%= raw(item['news_list_image']) %>" alt="<%= raw(item['news_list_title']) %>"
                srcset="<%= raw GlobalConstant::Base.placeholder_image_src %>"
+               <% if needs_low_priority_lazy_loading %>lazy-load-low-priority<% end %>
           />
         </div>
       <%end%>
