use svg tags instead of images.

--- a/app/views/layouts/ost.erb
+++ b/app/views/layouts/ost.erb
@@ -85,7 +85,7 @@
   <%= yield %>
   <%= render :partial => "/shared/web/common/footer_links" %>
   <%= render :partial => "/shared/web/common/footer" %>
-  <%= render :partial => "/shared/web/common/index_svg_sprite" %>
+  <%= render :partial => "/shared/web/common/index_svg_sprite", :cached => true %>
 </main>
 
 <!-- link rel="stylesheet" href="https://use.typekit.net/lde7yjs.css" / -->
