--- a/app/views/shared/web/common/_navbar.erb
+++ b/app/views/shared/web/common/_navbar.erb
@@ -22,19 +22,31 @@
           <ul class="dropdown-menu mega-dropdown-menu">
             <li>
               <a href="<%= GlobalConstant::CompanyOtherProductUrls.kit_root_url %>" class="p-0" title="OST - KIT">
-                <img src="//d36lai1ppm9dxu.cloudfront.net/assets/image/ost-kyc/ost-kit-brand-nav-menu.svg" width="80"/>
+                <svg class="ost-kit-brand-nav-menu" width="80" height="16">
+                  <switch>
+                    <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#ost-kit-brand-nav-menu"></use>
+                  </switch>
+                </svg>
                 Launch your own Branded Tokens and turn your business into a dynamic ecosystem.
               </a>
             </li>
             <li>
               <a href="<%= GlobalConstant::CompanyOtherProductUrls.view_root_url %>" class="p-0" title="OST - VIEW" target="_blank">
-                <img src="https://dxwfxs8b4lg24.cloudfront.net/ost-kit/images/ost-view-brand-nav-menu.svg" width="86"/>
+                <svg class="ost-kit-brand-nav-menu" width="86" height="16">
+                  <switch>
+                    <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#ost-view-brand-nav-menu"></use>
+                  </switch>
+                </svg>
                 View and analyze transactions across the OpenST side blockchains for a macro view of the OpenST ecosystem.
               </a>
             </li>
             <li>
               <a href="<%= GlobalConstant::CompanyOtherProductUrls.kyc_root_url %>" class="p-0" title="OST - KYC">
-                <img src="//d36lai1ppm9dxu.cloudfront.net/assets/image/ost-kyc/ost-kyc-brand-nav-menu.svg" width="80"/>
+                <svg class="ost-kyc-brand-nav-menu" width="80" height="16">
+                  <switch>
+                    <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#ost-kyc-brand-nav-menu"></use>
+                  </switch>
+                </svg>
                 The one place for your team to quickly review and process the KYC applications.
               </a>
             </li>
