--- a/app/assets/stylesheets/web/common/_ostsvgs.scss
+++ b/app/assets/stylesheets/web/common/_ostsvgs.scss
@@ -1,5 +1,10 @@
 @import "../ost_theme/variables";
 
+.ost-kit-brand-nav-menu, .ost-view-brand-nav-menu, .ost-kyc-brand-nav-menu {
+  display: block;
+}
+
+
 .ost-nav-logo{
   width: 68px;
   height: 35px;
