--- a/app/views/shared/web/common/_navbarsubmenu.erb
+++ b/app/views/shared/web/common/_navbarsubmenu.erb
@@ -21,19 +21,31 @@
           <ul class="sub-menu arrow-icon-top list-unstyled pt-0 pt-md-3 px-1 mx-2 mx-md-0 collapse" id="navbarToggler2">
             <li>
               <a href="<%= GlobalConstant::CompanyOtherProductUrls.kit_root_url %>" title="OST - KIT">
-                <img src="//d36lai1ppm9dxu.cloudfront.net/assets/image/ost-kyc/ost-kit-brand-nav-menu.svg" width="80"/>
+                <svg class="ost-kit-brand-nav-menu" width="80" height="16">
+                  <switch>
+                    <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#ost-kit-brand-nav-menu"></use>
+                  </switch>
+                </svg>
                 Launch your own Branded Tokens and turn your business into a dynamic ecosystem.
               </a>
             </li>
             <li>
               <a href="<%= GlobalConstant::CompanyOtherProductUrls.view_root_url %>" title="OST - VIEW" target="_blank">
-                <img src="https://dxwfxs8b4lg24.cloudfront.net/ost-kit/images/ost-view-brand-nav-menu.svg" width="86"/>
+                <svg class="ost-kit-brand-nav-menu" width="86" height="16">
+                  <switch>
+                    <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#ost-view-brand-nav-menu"></use>
+                  </switch>
+                </svg>
                 View and analyze transactions across the OpenST side blockchains for a macro view of the OpenST ecosystem.
               </a>
             </li>
             <li>
               <a href="<%= GlobalConstant::CompanyOtherProductUrls.kyc_root_url %>" title="OST - KYC">
-                <img src="//d36lai1ppm9dxu.cloudfront.net/assets/image/ost-kyc/ost-kyc-brand-nav-menu.svg" width="80"/>
+                <svg class="ost-kyc-brand-nav-menu" width="80" height="16">
+                  <switch>
+                    <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#ost-kyc-brand-nav-menu"></use>
+                  </switch>
+                </svg>
                 The one place for your team to quickly review and process the KYC applications.
               </a>
             </li>
@@ -58,9 +70,10 @@
             <li><a href="javascript:void(0)" class="nav-svg-link d-flex align-items-center">
               <svg class="nav-svg">
                 <switch>
-                  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#dropdown-api-reference-icon"></use>
+                  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#dropdown-dev-challenges-icon"></use>
                 </switch>
-              </svg><span class="pl-2">Dev Challenges</span>
+              </svg>
+              <span class="pl-2">Dev Challenges</span>
               <span class="drop-icon drop-icon-right"></span>
               <label title="Toggle Drop-down" class="drop-icon drop-icon-right navbar-toggler" for="winners" data-toggle="collapse" data-target="#navbarToggler4" aria-controls="navbarToggler4" aria-expanded="false" aria-label="Toggle navigation"></label>
             </a>
@@ -68,21 +81,11 @@
               <ul class="sub-menu list-unstyled pt-2 px-3 px-md-1 m-0 collapse" id="navbarToggler4">
                 <li>
                   <a href="<%= GlobalConstant::Base.root_url %>challenges" class="nav-svg-link d-flex align-items-center" title="Alpha II Challenge">
-                    <svg class="nav-svg">
-                      <switch>
-                        <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#dropdown-dev-challenges-icon"></use>
-                      </switch>
-                    </svg>
                     <span class="pl-2">Alpha II Challenge</span>
                   </a>
                 </li>
                 <li class="mb-0 mb-md-2">
                   <a href="<%= GlobalConstant::Base.root_url %>challenges-2" class="nav-svg-link d-flex align-items-center" title="Alpha III Challenge">
-                    <svg class="nav-svg">
-                      <switch>
-                        <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#dropdown-alpha3-dev-winners-icon"></use>
-                      </switch>
-                    </svg>
                     <span class="pl-2">Alpha III Challenge</span>
                   </a>
                 </li>
