--- a/app/views/web/ost/index/_home_carousel_content.erb
+++ b/app/views/web/ost/index/_home_carousel_content.erb
@@ -45,15 +45,11 @@
   <%end%>
 
   <%if item['news_list_title'] %>
-    <div class="carousel-title">
-      <%= raw(item['news_list_title']) %>
-    </div>
+    <div class="carousel-title"><%= raw(item['news_list_title']) %></div>
   <%end %>
 
   <%if item['news_list_description']%>
-    <div class="carousel-description">
-      <%= raw(item['news_list_description']) %>
-    </div>
+    <div class="carousel-description"><%= raw(item['news_list_description']) %></div>
   <%end%>
 
   <%if item['news_list_date']%>
