changes for ost winners pages

--- a/app/views/shared/web/common/_navbarsubmenu.erb
+++ b/app/views/shared/web/common/_navbarsubmenu.erb
@@ -75,9 +75,9 @@
               </svg>
               <span class="pl-2">Dev Challenges</span>
               <span class="drop-icon drop-icon-right"></span>
-              <label title="Toggle Drop-down" class="drop-icon drop-icon-right navbar-toggler" for="winners" data-toggle="collapse" data-target="#navbarToggler4" aria-controls="navbarToggler4" aria-expanded="false" aria-label="Toggle navigation"></label>
+              <label title="Toggle Drop-down" class="drop-icon drop-icon-right navbar-toggler" for="devChallenges" data-toggle="collapse" data-target="#navbarToggler4" aria-controls="navbarToggler4" aria-expanded="false" aria-label="Toggle navigation"></label>
             </a>
-              <input type="checkbox" id="winners">
+              <input type="checkbox" id="devChallenges">
               <ul class="sub-menu list-unstyled pt-2 px-3 px-md-1 m-0 collapse" id="navbarToggler4">
                 <li>
                   <a href="<%= GlobalConstant::Base.root_url %>challenges" class="nav-svg-link d-flex align-items-center" title="Alpha II Challenge">
