--- a/app/views/web/ost/partners/_use_cases.erb
+++ b/app/views/web/ost/partners/_use_cases.erb
@@ -1,10 +1,26 @@
 <section class="py-5 container-fluid use_cases">
   <div class="row">
-    <h2 class="mx-auto">Partner Projects</h2>
+    <h2 class="mx-auto">Partners Projects</h2>
   </div>
   <%
     autoplay_version = "?rel=0&autoplay=1";
     use_cases =  [
+                      {
+                        :title => 'LGBT Foundation',
+                        :description => "The LGBT Foundation will be launching the LGBT Token to empower, connect and support LGBT+ people all over the world. One of its first launch partners is Hornet Networks, a social platform for gay men with more than 24 million users worldwide.",
+                        :youtube_img_1x => "https://dxwfxs8b4lg24.cloudfront.net/ost/images/partners/lgbt@1x.png",
+                        :youtube_img_2x => "https://dxwfxs8b4lg24.cloudfront.net/ost/images/partners/lgbt@2x.png",
+                        :youtube_link => "https://www.youtube.com/embed/OlPu9ezzPzQ" + autoplay_version,
+                        :project_link => "https://lgbt.foundation/",
+                      },
+                      {
+                        :title => 'Traipse',
+                        :description => "Traipse is on a mission to keep the quaint towns of Virginia on the map. The American startup wants to tokenize downtowns in an effort to encourage people to solve riddles, visit historic landmarks and to visit locally owned businesses and to minimize credit card transaction fees for the merchants.",
+                        :youtube_img_1x => "https://dxwfxs8b4lg24.cloudfront.net/ost/images/partners/traipse@1x.png",
+                        :youtube_img_2x => "https://dxwfxs8b4lg24.cloudfront.net/ost/images/partners/traipse@2x.png",
+                        :youtube_link => "https://www.youtube.com/embed/IBAmUbiacKA" + autoplay_version,
+                        :project_link => "https://www.traipse.co/",
+                      },
                       {
                         :title => 'The Brightly Co.',
                         :description => "The Brightly Co.wants to change the world through conscious shopping. They are catering to the millennial generation, who are overwhelmingly supportive (72%) of buying products that are made ethically and sustainably. With an annual spending power of over $200B, millennials can make a difference!",
