--- a/app/assets/stylesheets/web/ost/index/HomeCarousel.scss
+++ b/app/assets/stylesheets/web/ost/index/HomeCarousel.scss
@@ -110,13 +110,17 @@
   }
 
   .video-wrapper {
+    height: 0;
+    width: 100%;
     position: relative;
-    display: inline-block;
+    padding-top: 56.25%;
 
     .video-btn {
+      top : 0;
+      z-index: 1;
+      padding: 0;
       position: absolute;
       background: transparent;
-      top : 0;
 
       &:hover {
         svg.icon-play {
@@ -128,6 +132,11 @@
           fill: #E4B030;
         }
       }
+    }
+
+    .img-wrapper{
+      top: 0;
+      position: absolute;
     }
 
     .play-icon {
