--- a/app/views/web/ost/roadmap/_jumbotron.erb
+++ b/app/views/web/ost/roadmap/_jumbotron.erb
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container d-none d-md-block">
   <div class="row d-flex justify-content-center">
 
     <div class="col-12 col-md-8">
@@ -388,24 +388,24 @@
 
     <div class="row">
       <div class="col-12">
-        <div class="row">
-          <div class="col-8">
-            <div class="container-content">
-              Vertical Left-Right Timeline
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed porttitor gravida aliquam. Morbi orci urna, iaculis in ligula et, posuere interdum lectus.
+          <div class="row">
+            <div class="col-8">
+              <div class="row">
+                <div class="col-12">
+                  <div class="row">
+                    <div class="col-3 bg-line first py-5"></div>
+                    <div class="col-3 bg-line first py-5"></div>
+                    <div class="col-6 bg-line second py-5"></div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-4">
+              <div class="row">
+                <div class="col-12 bg-line third py-5"></div>
+              </div>
             </div>
           </div>
-        </div>
-        <div class="row">
-          <div class="col-4">
-            <div class="row h-100">
-              <div class="col-6 bg-line first py-5 d-flex align-items-center"></div>
-              <div class="col-6 bg-line first py-5 d-flex align-items-center"></div>
-            </div>
-          </div>
-          <div class="col-4 bg-line second py-5 d-flex align-items-center"></div>
-          <div class="col-4 bg-line third py-5 align-items-center d-flex"></div>
-        </div>
       </div>
     </div>
 
