--- a/app/views/web/ost/roadmap.html.erb
+++ b/app/views/web/ost/roadmap.html.erb
@@ -1,1 +1,3 @@
-<%= render :partial => "/web/ost/roadmap/jumbotron" %>
+<%= render :partial => "/shared/web/common/navbarsubmenu" %>
+<%= render :partial => "/web/ost/roadmap/desktop" %>
+<%= render :partial => "/web/ost/roadmap/mobile" %>
