--- a/app/views/web/ost/roadmap/_desktop.erb
+++ b/app/views/web/ost/roadmap/_desktop.erb
@@ -1,21 +1,8 @@
-<div class="container d-none d-md-block">
+<div class="container roadmap-container d-none d-md-block">
   <div class="row d-flex justify-content-center">
 
     <div class="col-12 col-md-8">
       <div class="row">
-        <!--<div class="col-1 corner-left">-->
-        <!--</div>-->
-        <!--<div class="col-5 right"></div>-->
-        <!--<div class="col-5 left" style="-->
-          <!--/*border-left: 2px solid #d9a025;*/-->
-          <!--/*border-right: none;*/-->
-          <!--/*border-radius: 0 0 0 100px;*/-->
-          <!--border-bottom: 2px solid #d9a025;-->
-        <!--">-->
-        <!--</div>-->
-        <!--<div class="col-1 corner-right">-->
-        <!--</div>-->
-
         <svg width="100%" height="100%" viewBox="0 0 830 98" xmlns="http://www.w3.org/2000/svg">
           <g stroke-width="3" fill="none" fill-rule="evenodd">
             <path class="path-right" d="M828 96.589c0-26.673-21.572-48.295-48.183-48.295H463.183C436.573 48.294 415 26.672 415 0"/>
@@ -23,7 +10,6 @@
             <path class="path-left" d="M415 0c0 26.672-21.572 48.294-48.183 48.294H50.183C23.573 48.294 2 69.916 2 96.59" />
           </g>
         </svg>
-
       </div>
     </div>
 
@@ -386,27 +372,123 @@
     </div>
   </div>
 
-    <div class="row">
-      <div class="col-12">
+  <div class="row">
+    <div class="col-8">
+      <div class="row">
+        <div class="col-12">
           <div class="row">
-            <div class="col-8">
-              <div class="row">
-                <div class="col-12">
-                  <div class="row">
-                    <div class="col-3 bg-line first py-5"></div>
-                    <div class="col-3 bg-line first py-5"></div>
-                    <div class="col-6 bg-line second py-5"></div>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="col-4">
-              <div class="row">
-                <div class="col-12 bg-line third py-5"></div>
-              </div>
-            </div>
+            <div class="col-3 bg-line first py-5"></div>
+            <div class="col-3 bg-line first py-5"></div>
+            <div class="col-6 bg-line second py-5"></div>
           </div>
+        </div>
       </div>
     </div>
+    <div class="col-4">
+      <div class="row">
+        <div class="col-12 bg-line third py-5"></div>
+      </div>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col-12">
+      <div class="row">
+        <div class="col-8">
+          <div class="container-content">
+            Vertical Left-Right Timeline
+            1
+            Fully Responsive
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed porttitor gravida aliquam. Morbi orci urna, iaculis in ligula et, posuere interdum lectus.
+          </div>
+        </div>
+        <div class="col-4 bg-line third"></div>
+      </div>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col-8">
+      <div class="row">
+        <div class="col-12">
+          <div class="row">
+            <div class="col-3 bg-line first py-5"></div>
+            <div class="col-3 bg-line first py-5"></div>
+            <div class="col-6 bg-line second py-5"></div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="col-4">
+      <div class="row">
+        <div class="col-12 bg-line third py-5"></div>
+      </div>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col-12">
+      <div class="container-content">
+        Vertical Left-Right Timeline
+        1
+        Fully Responsive
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed porttitor gravida aliquam. Morbi orci urna, iaculis in ligula et, posuere interdum lectus.
+      </div>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col-8">
+      <div class="row">
+        <div class="col-12">
+          <div class="row">
+            <div class="col-3 bg-line first py-5"></div>
+            <div class="col-3 bg-line first py-5"></div>
+            <div class="col-6 bg-line second py-5"></div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="col-4">
+      <div class="row">
+        <div class="col-12 bg-line third py-5"></div>
+      </div>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col-12">
+      <div class="row">
+        <div class="col-8">
+          <div class="container-content">
+            Vertical Left-Right Timeline
+            1
+            Fully Responsive
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed porttitor gravida aliquam. Morbi orci urna, iaculis in ligula et, posuere interdum lectus.
+          </div>
+        </div>
+        <div class="col-4 bg-line third"></div>
+      </div>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col-8">
+      <div class="row">
+        <div class="col-12">
+          <div class="row">
+            <div class="col-3 bg-line first py-5"></div>
+            <div class="col-3 bg-line first py-5"></div>
+            <div class="col-6 bg-line second py-5"></div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="col-4">
+      <div class="row">
+        <div class="col-12 bg-line third py-5"></div>
+      </div>
+    </div>
+  </div>
 
 </div>
